Upgraded ScriptDB project to SQL 2008 and VS 2008. There will be a few minor changes to the scripted output:  * SMO 2008 adds the role that is granting the permissions to each GRANT statement ("GRANT... AS dbo")  * I modified the logic for generating data files:    * Tables with 50,000+ rows will be scripted out using bcp instead of SQL INSERT statements.    * When generating SQL INSERT statements I modified the logic for breaking the inserts into batches. The GO statements are inserted based on a checksum of the data in a row. This way when rows are added or removed it doesn't cause diffs to show changes in a bunch of other rows that didn't change (due to the changing position of the GO statements). For example, in [changeset:8954/branches/Product/Solution/Database/Merchant/Data/EBay.CategoryAttributeSet.sql EBay.CategoryAttributeSet.sql in r8954] there were only 2 rows that were added but 38 diffs are shown.

--- a/Mercent.SqlServer.Management.csproj
+++ b/Mercent.SqlServer.Management.csproj
@@ -1,14 +1,17 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{ED2A1340-22EE-4923-AD11-74A2819F6E53}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Mercent.SqlServer.Management</RootNamespace>
     <AssemblyName>ScriptDB</AssemblyName>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -29,19 +32,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.SqlServer.ConnectionInfo, Version=9.0.242.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
-    <Reference Include="Microsoft.SqlServer.Smo, Version=9.0.242.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
-    <Reference Include="Microsoft.SqlServer.SmoEnum, Version=9.0.242.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
-    <Reference Include="Microsoft.SqlServer.SqlEnum, Version=9.0.242.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
+    <Reference Include="Microsoft.SqlServer.ConnectionInfo, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.SqlServer.Management.Sdk.Sfc, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.SqlServer.Smo, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.SqlServer.SmoExtended, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.SqlServer.SqlEnum, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -49,17 +48,6 @@
     <Compile Include="FileScripter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <COMReference Include="SQLDMO">
-      <Guid>{10010001-E260-11CF-AE68-00AA004A34D5}</Guid>
-      <VersionMajor>8</VersionMajor>
-      <VersionMinor>5</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <Private>True</Private>
-    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="Build\bin\MSBuildCommunity\MSBuild.Community.Tasks.Targets" />
@@ -70,18 +58,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <PropertyGroup>
-    <ILMergeOutput>bin\$(TargetFileName)</ILMergeOutput>	  
-  </PropertyGroup>
-  <Target Name="BeforeClean">
-	  <Delete Files="$(ILMergeOutput)" Condition="Exists($(ILMergeOutput))"/>
-  </Target>
-  <Target Name="Merge"
-		  DependsOnTargets="Build"
-		  Inputs="@(IntermediateAssembly); @(ReferenceComWrappersToCopyLocal)"
-		  Outputs="$(ILMergeOutput)">
-	  <ILMerge InputAssemblies="@(IntermediateAssembly); @(ReferenceComWrappersToCopyLocal)"
-			OutputFile="$(ILMergeOutput)"
-			DebugInfo="false"/>
-  </Target>
 </Project>
