Modified ScriptDB to close existing connections to the database and optionally drop it if it already exists.  * This should make deployments to Dev more reliable.  * Also upgraded ScriptDB to target .NET 4.0

--- a/Mercent.SqlServer.Management.Tests.csproj
+++ b/Mercent.SqlServer.Management.Tests.csproj
@@ -10,7 +10,8 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Mercent.SqlServer.Management</RootNamespace>
     <AssemblyName>Mercent.SqlServer.Management.Tests</AssemblyName>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -56,16 +57,6 @@
       <Project>{ED2A1340-22EE-4923-AD11-74A2819F6E53}</Project>
       <Name>Mercent.SqlServer.Management</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <COMReference Include="SQLDMO">
-      <Guid>{10010001-E260-11CF-AE68-00AA004A34D5}</Guid>
-      <VersionMajor>8</VersionMajor>
-      <VersionMinor>5</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
