Added ability to generate upgrade scripts.
This is still an incomplete work in progress.

 * Added "-upgrade" command line switch to ScriptDB.exe to support generating upgrade scripts.
 * Moved common script utility methods out of FileScripter into ScriptUtility so they can be used by other scripting classes.
 * Also updated copyright year to 2013.

--- a/Mercent.SqlServer.Management.Tests.csproj
+++ b/Mercent.SqlServer.Management.Tests.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\FileScripterFixture.cs" />
     <Compile Include="Tests\ScriptTest.cs" />
+    <Compile Include="Upgrade\Data\Tests\DataUpgraderTest.cs" />
+    <Compile Include="Upgrade\Schema\Tests\SchemaUpgradeScripterTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Mercent.SqlServer.Management.csproj">
