--- a/Mercent.SqlServer.Management.csproj
+++ b/Mercent.SqlServer.Management.csproj
@@ -37,6 +37,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.SqlServer.ConnectionInfo, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.SqlServer.Dac">
+      <HintPath>C:\Program Files (x86)\Microsoft SQL Server\110\DAC\bin\Microsoft.SqlServer.Dac.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.SqlServer.Management.Sdk.Sfc, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.SqlServer.Smo, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.SqlServer.SmoExtended, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
@@ -50,10 +53,32 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DependencySorter.cs" />
     <Compile Include="FileScripter.cs" />
+    <Compile Include="IDependencyNode.cs" />
+    <Compile Include="IO\DirectoryComparer.cs" />
+    <Compile Include="IO\FileCompareInfo.cs" />
+    <Compile Include="IO\FileComparer.cs" />
+    <Compile Include="IO\FileCompareStatus.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptExtensions.cs" />
     <Compile Include="ScriptFile.cs" />
+    <Compile Include="ScriptUtility.cs" />
+    <Compile Include="TableIdentifier.cs" />
+    <Compile Include="TableIdentifierComparer.cs" />
+    <Compile Include="Upgrade\Data\DataUpgradeOptions.cs" />
+    <Compile Include="Upgrade\Data\DataUpgradeScripter.cs" />
+    <Compile Include="Upgrade\Data\ForeignKeyInfo.cs" />
+    <Compile Include="Upgrade\Data\ColumnInfo.cs" />
+    <Compile Include="Upgrade\Data\TableInfo.cs" />
+    <Compile Include="Upgrade\Schema\SchemaUpgradeScripter.cs" />
+    <Compile Include="Upgrade\UpgradeScripter.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="LICENSE" />
+    <None Include="NOTICE" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
