Modified FileScripter to use MessageReceived events.
The ErrorMessageReceived, OutputMessageReceived, and ProgressMessageReceived events can be used instead of having the output written to the console.

Also suppressed a bcp warning about empty strings converted to null.

--- a/Mercent.SqlServer.Management.csproj
+++ b/Mercent.SqlServer.Management.csproj
@@ -60,6 +60,7 @@
     <Compile Include="IO\FileCompareInfo.cs" />
     <Compile Include="IO\FileComparer.cs" />
     <Compile Include="IO\FileCompareStatus.cs" />
+    <Compile Include="IO\MessageReceivedEventArgs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptExtensions.cs" />
