Modified UpgradeScripter to use file patterns for custom scripts.
Also detect and prompt the user whether to continue after an error in a script.

--- a/Mercent.SqlServer.Management.csproj
+++ b/Mercent.SqlServer.Management.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbortException.cs" />
     <Compile Include="DependencySorter.cs" />
     <Compile Include="FileScripter.cs" />
     <Compile Include="IDependencyNode.cs" />
