--- a/Mercent.SqlServer.Management.Tests.csproj
+++ b/Mercent.SqlServer.Management.Tests.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\FileScripterFixture.cs" />
     <Compile Include="Tests\ScriptTest.cs" />
-    <Compile Include="Upgrade\Data\Tests\DataUpgraderTest.cs" />
+    <Compile Include="Upgrade\Data\Tests\DataUpgradeScripterTest.cs" />
     <Compile Include="Upgrade\Schema\Tests\SchemaUpgradeScripterTest.cs" />
   </ItemGroup>
   <ItemGroup>
